# softlocker

./: .gitignore  README.md  package.json  pnpm-lock.yaml  test_ocr.py
apps/api/: pyproject.toml
apps/api/src/: config.py  database.py  main.py
apps/api/src/models/: document.py  user.py
apps/api/src/routers/: auth.py  documents.py
apps/api/src/schemas/: auth.py  document.py
apps/api/src/services/: categorizer.py  file_storage.py  ocr.py
apps/web/: next.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/signup/: page.tsx
apps/web/src/components/: DocumentCard.tsx  DocumentModal.tsx  Header.tsx  Sidebar.tsx  UploadModal.tsx
apps/web/src/lib/: api.ts  auth.ts
apps/web/src/types/: index.ts
