[project]
name = "softlocker-api"
version = "0.1.0"
description = "SoftLocker API — Document categorization backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "bcrypt==4.0.1",
    "pytesseract>=0.3.10",
    "pymupdf>=1.24.0",
    "python-multipart>=0.0.9",
    "pillow>=10.0.0",
    "aiofiles>=24.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
